carvel-package/dashboard-manifest/config/02_dashboard-service.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
    projectcontour.io/upstream-protocol.tls: "443"
  name: kubernetes-dashboard
  namespace: #@ data.values.namespace
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
