carvel-package/dashboard-manifest/config/07_dashboard-ingress.yaml
#@ load("@ytt:data", "data")

#@yaml/text-templated-strings
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: #@ data.values.namespace
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
      projectcontour.io/ingress.class: contour
spec:
  rules:
    - host: k8s-ui.(@= data.values.vm_ip @).nip.io
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - k8s-ui.(@= data.values.vm_ip @).nip.io
      secretName: k8s-ui-secret
